assets/css/style.css
/* root fontsize is 16px. 1rem = 16px*/

/* Google font imports for regular/bold (400/700) weights of the Space Mono and Trispace font families. */
@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Trispace:wght@400;700&display=swap');

/* --- General Styling --- */

body {
    font-family: "Trispace", sans-serif;
    background-color: #06283D;
}

/*  Adds an underline to the active class in the navbar*/
.active {
    text-decoration: underline;
}

/* Gives all heading elements a default color of #57BCFF and 'Space Mono' as the primary font*/
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Space Mono", monospace;
    color: #57BCFF
}

/* Gives all paragraph and anchor elements a default color of #DFF6FF*/
p,
a {
    color: #DFF6FF;
}

/* 
Applies a margin of 4rem to the top of the element with this class. This is to space the page out when crossing into other sections 
Set font weight to 700 to more clearly define a new section of the page
*/
.section-break {
    font-weight: 700;
    margin-top: 4rem;
}
/* Spaces out the section headings from the section header by 2 rem to provide content with space*/
.section-space {
    margin-top: 2rem;
}
/* --- Navbar --- */

/* Sets the navbar background to match the bodys background and sets the font color to a slighlty darker default heading color. Adds letter spacing of 1 pixel */
.navbar,
.navbar-brand,
.nav-link {
    background-color: #06283D;
    color: #57bcfff3;
    letter-spacing: 1px;
}

/* Sets 'Ethan Pitt' to bold, increases the font size to make it stand out from the nav items, and sets the font to 'Space Mono */
.navbar-brand {
    font-weight: 700;
    font-size: 2rem;
}

/* Increases the nav-link item font size */
.nav-link {
    font-size: 1.5rem;
}

/* --- Footer --- */

/* Sets a top margin of 25 pixels*/
footer {
    margin-top: 5rem;
}

/* Sets a font size of 1.6 rem for footer header elements*/
.footer-content h1 {
    font-size: 1.6rem;
}

/* Sets a font size of 1rem pixels for paragraphs and unordered list items */
.footer-content a,
.footer-content ul li {
    font-size: 1rem;
}

/* Sets the font awesome icons in the footer-contact section to 18px */
.footer-contact ul li a i {
    font-size: 1.2rem;
}

/* --- About Me --- */

/* Adds a top margin of 1rem to the top and bottom of the about-info section*/
.about-info {
    margin: 1rem 0;
}

/* --------------------------- Resume */

/* Sets the header elements to have a bottom margin of 40 pixels to space out content. */
.skill-set h1,
.work-history h1 {
    margin-bottom: 2.5rem;
}

.timeline {
    border-left: 1px solid #DFF6FF;
    position: relative;
    list-style: none;
}

.timeline .timeline-item {
    position: relative;
}

.timeline .timeline-item:after {
    position: absolute;
    display: block;
    top: 0;
    background-color: #DFF6FF;
    left: -2.4rem;
    border-radius: 50%;
    height: 0.8rem;
    width: 0.8rem;
    content: "";
}

.timeline-item h1 {
    font-size: 1.5rem;
}


/* --------------------------- Projects */

.contact-link {
    text-decoration: none;
    color: #57BCFF
}

.project-heading {
    font-size: 1.5rem;
    margin: 1.6rem 0;
}

.project-text {
    text-align: center;
    padding: 2rem 0;
}

/* --------------------------- Contact  */
.center-form {
    max-width: 70%;
    padding: 10px 10px;
    margin-left: auto;
    margin-right: auto;
}

.center-form form label {
    color: #DFF6FF;
    padding-bottom: 0.4rem;
    padding-top: 0.9rem;
}

.btn {
    margin-top: 1rem;
    margin-bottom: 1.2rem;
    color: #57BCFF;
    background-color: #06283D;
}

.btn:hover {
    background-color: #57BCFF;
    color: #06283D;
}


/* --------------------------- Media Queries */

@media (max-width: 320px) {
    .navbar-brand {
        font-size: 1.5rem;
    }

    .nav-link {
        font-size: 1rem;
    }
}

/* When Navbar is above 768px, margin-right of 100.33px is applied to offset navbar-brand element.*/

@media (min-width: 768px) {
    .navbar-expand-md .navbar-collapse {
        margin-right: 6.271rem;
    }

    .center-form {
        max-width: 40%;
    }
}

